--- a/config/app.json
+++ b/config/app.json
@@ -1,1 +1,15 @@
-{"limiter":{"enable":true,"websockets":{"rps":10}},"redis":{"db_index":1}}
+{
+  "http": {
+    "port":               3000,
+    "hostname":           "0.0.0.0"
+  },
+  "https": {
+    "enabled":            false,
+    "port":               443,
+    "domain":             "www.socketstream.org"
+  },
+  "browser_check": {
+    "enabled":            true,
+    "strict":             true
+  }
+}
